# tc

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  Taskfile.yml
.github/workflows/: ci.yml
crates/tc/: Cargo.toml
crates/tc-core/: Cargo.toml
crates/tc-core/src/: config.rs  context.rs  dag.rs  error.rs  filter.rs  fuzzy.rs  lib.rs  status.rs  task.rs  theme.rs
crates/tc-executor/: Cargo.toml
crates/tc-executor/src/: any.rs  claude.rs  custom.rs  error.rs  io.rs  lib.rs  log_tail.rs  mock.rs  opencode.rs  reviewer.rs  sandbox.rs  tester.rs  traits.rs  verify.rs
crates/tc-packer/: Cargo.toml
crates/tc-packer/src/: collect.rs  error.rs  format.rs  lib.rs  security.rs  tokens.rs
crates/tc-spawn/: Cargo.toml
crates/tc-spawn/src/: error.rs  lib.rs  merge.rs  process.rs  recovery.rs  resolver.rs  tmux.rs  worktree.rs
crates/tc-spawn/src/scheduler/: core.rs  mod.rs  polling.rs  spawning.rs  validation.rs  worker_states.rs
crates/tc-spawn/tests/: integration.rs
crates/tc-storage/: Cargo.toml
crates/tc-storage/src/: atomic.rs  config.rs  error.rs  init.rs  lib.rs  tasks.rs
crates/tc-tui/: Cargo.toml
crates/tc-tui/src/: create_task.rs  editor.rs  error.rs  event.rs  keybind.rs  lib.rs  log_view.rs  runtime.rs  theme.rs  ui.rs
crates/tc-tui/src/app/: actions.rs  chord_tests.rs  input.rs  input_tests.rs  mod.rs  settings.rs  state.rs  test_support.rs  types.rs  ui_state.rs  update.rs  update_tests.rs
crates/tc-tui/src/components/: confirm_delete.rs  create_task_form.rs  dag_view.rs  detail.rs  epic_list.rs  help.rs  input.rs  log_viewer.rs  mod.rs  settings.rs  task_card.rs  task_table.rs  which_key.rs
crates/tc/src/: cli.rs  cli_parsers.rs  error.rs  main.rs  output.rs
crates/tc/src/commands/: add.rs  changelog.rs  completion.rs  config.rs  delete.rs  edit.rs  epic.rs  export.rs  find.rs  graph.rs  impl_.rs  import.rs  init.rs  list.rs  migrate.rs  mod.rs  next.rs  pack.rs  plan.rs  review.rs  show.rs  spawn.rs  stats.rs  status.rs  test.rs  tui.rs  ui.rs  validate.rs  views.rs
crates/tc/tests/: integration.rs
crates/tc/tests/e2e/: cli_workflow.rs  concurrent.rs  error_paths.rs  helpers.rs  main.rs  packer_workflow.rs  status_transitions.rs
