[package]
name = "tc-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Executor trait and backends (Claude, Opencode) for running AI agents from tc (Task Commander)."

[dependencies]
tc-core = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
which = { workspace = true }
tokio = { workspace = true }
tempfile = "3"

[dev-dependencies]
