[package]
name = "tc-spawn"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parallel agent orchestration in git worktrees for tc (Task Commander): scheduler, recovery, merge."

[dependencies]
tc-core = { workspace = true }
tc-executor = { workspace = true }
tc-storage = { workspace = true }
tc-packer = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
chrono = { workspace = true }
which = { workspace = true }
minijinja = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
