[package]
name = "tc-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ratatui-based terminal UI for tc (Task Commander)."

[dependencies]
tc-core = { workspace = true }
tc-storage = { workspace = true }
tc-spawn = { workspace = true }
tc-executor = { workspace = true }
tc-packer = { workspace = true }
libc = "0.2"
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
chrono = { workspace = true }
arboard = { version = "3", default-features = false, features = ["image-data"] }
png = "0.17"
which = { workspace = true }

[dev-dependencies]
tempfile = "3"
