[package]
name = "tc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Task Commander -- Rust CLI/TUI task tracker and AI-agent orchestrator (Claude, Opencode) with git worktrees."

[[bin]]
name = "tc"
path = "src/main.rs"

[dependencies]
tc-core = { workspace = true }
tc-packer = { workspace = true }
tc-storage = { workspace = true }
tc-executor = { workspace = true }
tc-spawn = { workspace = true }
tc-tui = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
which = { workspace = true }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"
serde_yaml_ng = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
csv = { workspace = true }

[dev-dependencies]
